objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>CampaignMemberStatuses__c</fullName>
        <label>Campaign Member Statuses</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Iniciado</fullName>
                </value>
                <value>
                    <fullName>Mensaje Enviado</fullName>
                </value>
                <value>
                    <fullName>Interesado</fullName>
                </value>
                <value>
                    <fullName>No Interesado</fullName>
                </value>
                <value>
                    <fullName>Clickeado</fullName>
                </value>
                <value>
                    <fullName>Finalizado</fullName>
                </value>
                <value>
                    <fullName>Concretado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <label>Channel Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SubtypeL2__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>OUT</fullName>
                </value>
                <value>
                    <fullName>IN/OUT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Channel_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>IVR</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>RRSS</fullName>
                </value>
                <value>
                    <fullName>ISMS</fullName>
                </value>
                <value>
                    <fullName>E-Mail</fullName>
                </value>
                <value>
                    <fullName>Sat Push</fullName>
                </value>
                <value>
                    <fullName>APP Push</fullName>
                </value>
                <value>
                    <fullName>Web Push</fullName>
                </value>
                <value>
                    <fullName>Discador</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Masivo</fullName>
                </value>
                <value>
                    <fullName>Empresa</fullName>
                </value>
                <value>
                    <fullName>Masivo y Empresa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarketingCloudCampaignId__c</fullName>
        <externalId>true</externalId>
        <label>Marketing Cloud Campaign Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objetive__c</fullName>
        <label>Objetive</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SubtypeL1__c</fullName>
        <label>Subtype L1</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alta/Portin Nuevo Cliente  (Nuevo DNI/CUIT)</fullName>
                </value>
                <value>
                    <fullName>Bienvenida</fullName>
                </value>
                <value>
                    <fullName>Activ. Comercial</fullName>
                </value>
                <value>
                    <fullName>Fidelización</fullName>
                </value>
                <value>
                    <fullName>Comunicación/Educativa</fullName>
                </value>
                <value>
                    <fullName>Encuesta</fullName>
                </value>
                <value>
                    <fullName>Conversión</fullName>
                </value>
                <value>
                    <fullName>Relacionamiento</fullName>
                </value>
                <value>
                    <fullName>Transaccional</fullName>
                </value>
                <value>
                    <fullName>Retención</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubtypeL2__c</fullName>
        <label>Subtype L2</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SubtypeL1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alta/Portin (DNI/CUIT existente)</fullName>
                </value>
                <value>
                    <fullName>Cambio de Terminal</fullName>
                </value>
                <value>
                    <fullName>Nuevo Servicio OTT/VAS</fullName>
                </value>
                <value>
                    <fullName>Cambio de Producto</fullName>
                </value>
                <value>
                    <fullName>Upselling</fullName>
                </value>
                <value>
                    <fullName>Cash-in (recargas)</fullName>
                </value>
                <value>
                    <fullName>Cash-Out (contenidos, packs, etc)</fullName>
                </value>
                <value>
                    <fullName>Alianzas</fullName>
                </value>
                <value>
                    <fullName>Club Personal</fullName>
                </value>
                <value>
                    <fullName>Configuración de servicios</fullName>
                </value>
                <value>
                    <fullName>Confiabilización de Datos</fullName>
                </value>
                <value>
                    <fullName>Morosidad</fullName>
                </value>
                <value>
                    <fullName>Modificaciones en los servicios</fullName>
                </value>
                <value>
                    <fullName>Newsletters</fullName>
                </value>
                <value>
                    <fullName>Testing ad hoc, NPS</fullName>
                </value>
                <value>
                    <fullName>Cart View</fullName>
                </value>
                <value>
                    <fullName>Cart Abandon</fullName>
                </value>
                <value>
                    <fullName>Promotional</fullName>
                </value>
                <value>
                    <fullName>Cross Sell</fullName>
                </value>
                <value>
                    <fullName>Educacional</fullName>
                </value>
                <value>
                    <fullName>Saludos especial</fullName>
                </value>
                <value>
                    <fullName>Bienvenida</fullName>
                </value>
                <value>
                    <fullName>Soporte</fullName>
                </value>
                <value>
                    <fullName>Factura</fullName>
                </value>
                <value>
                    <fullName>Detalle de consumo</fullName>
                </value>
                <value>
                    <fullName>Churn Mitigation</fullName>
                </value>
                <value>
                    <fullName>Recupero</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>NAWinback</fullName>
                    <label>N/A.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>associated_offersand_products__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Offers and Products</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CampaignContentDocumentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Content Document</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>vlocity_cmt__CampaignContentDocument__c.vlocity_cmt__CampaignId__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <filterItems>
                <field>vlocity_cmt__CampaignContentDocument__c.vlocity_cmt__IsPrimary__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_cmt__CampaignContentDocument__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContentDocumentTitle__c</fullName>
        <formula>vlocity_cmt__CampaignContentDocumentId__r.vlocity_cmt__ContentTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Content Document Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EmailTemplate__c</fullName>
        <inlineHelpText>Email template used to send email to campaign member.</inlineHelpText>
        <label>Email Template</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FollowUpTo__c</fullName>
        <description>If this activity is a follow up to a previous Activity</description>
        <label>Follow Up To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MassEmailContent__c</fullName>
        <label>Email Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MassEmailSubject__c</fullName>
        <label>Email Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProcessLanguage__c</fullName>
        <defaultValue>&apos;English&apos;</defaultValue>
        <label>Process Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProcessPrefillBundle__c</fullName>
        <label>Process Prefill Bundle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProcessSubType__c</fullName>
        <defaultValue>&apos;Default&apos;</defaultValue>
        <label>Process Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProcessType__c</fullName>
        <defaultValue>&apos;Campaign&apos;</defaultValue>
        <description>It is the OmniScript Type</description>
        <label>Process Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>Commercial_Campaigns</fullName>
        <active>true</active>
        <description>Commercial Campaigns with Marketing Cloud</description>
        <label>Commercial Campaigns</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordDesa01</fullName>
        <active>true</active>
        <label>RecordDesa01</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__MobilePhoneCampaign</fullName>
        <active>true</active>
        <description>Mobile Phone Campaign</description>
        <label>MobilePhoneCampaign</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>